Fix some picker forms CSS on Firefox

--- a/css/index.css
+++ b/css/index.css
@@ -186,7 +186,7 @@
   flex-direction: column;
   justify-content: flex-start;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
 .picker > form input,
 .picker > form select,
@@ -196,8 +196,8 @@
   fill: #f5f5f5;
   border: none;
   border-radius: 0;
-  flex-grow: 1;
   font-size: x-large;
+  min-width: 0;
   padding: 8px;
 }
 .picker > form label {
@@ -206,7 +206,6 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  flex-basis: 60%;
 }
 .picker.fullWidth {
   width: 100%;
@@ -277,12 +276,15 @@
 #timePicker form {
   flex-direction: row;
 }
-#coachPicker form input,
-#integerPicker form input,
-#platformPicker form input,
+#coachPicker form select,
 #timePicker form input {
-  flex-basis: 40%;
-  width: 80px;
+  flex-grow: 1;
+}
+#integerPicker form input {
+  max-width: 100px;
+}
+#integerPicker form label {
+  flex-grow: 1;
 }
 #phrasesetPicker .chChoicesBox dd {
   overflow: hidden;
@@ -290,6 +292,11 @@
   white-space: nowrap;
   display: block;
   font-size: large;
+}
+#platformPicker form input,
+#platformPicker form select {
+  flex-basis: 50%;
+  max-width: 100px;
 }
 #stationlistPicker form {
   flex-direction: row;
@@ -304,7 +311,6 @@
 #stationlistPicker form .stationList menu,
 #stationlistPicker form .stationList .delStation {
   flex-shrink: 0;
-  margin: 4px;
 }
 #stationlistPicker form .stationList menu {
   display: none;
@@ -318,8 +324,8 @@
   cursor: pointer;
   fill: #f5f5f5;
   flex-basis: 50%;
-  margin: 4px;
-  padding: 4px;
+  margin: 4px 4px;
+  padding: 8px;
 }
 #stationlistPicker form .stationList menu .addStation:hover,
 #stationlistPicker form .stationList menu .closePicker:hover {
@@ -342,6 +348,12 @@
 #stationlistPicker form .stationList menu .closePicker:disabled:active {
   background: #222;
 }
+#stationlistPicker form .stationList menu .addStation {
+  margin-right: 2px;
+}
+#stationlistPicker form .stationList menu .closePicker {
+  margin-left: 2px;
+}
 #stationlistPicker form .stationList .delStation {
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -350,6 +362,7 @@
   user-select: none;
   border: 2px solid #cc7e00;
   line-height: 28px;
+  margin: 4px;
   padding: 8px auto;
   text-align: center;
 }
@@ -696,6 +709,10 @@ iframe {
   #phrasesetPicker .chChoicesBox dd {
     font-size: smaller;
     padding: 12px 8px;
+  }
+  #platformPicker form input,
+  #platformPicker form select {
+    max-width: initial;
   }
   #stationlistPicker form {
     flex-direction: column;
