--- a/css/responsive.styl
+++ b/css/responsive.styl
@@ -95,6 +95,11 @@
     font-size smaller
     padding   12px 8px
 
+#platformPicker
+  form
+    input, select
+      max-width initial
+
 #stationlistPicker
   form
     flex-direction column
